Updated index.html specimen page to use Roboto

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/960.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="css/wfs.css" />
 
-<script src="http://use.typekit.com/vsg7cjt.js"></script>
-<script>try{Typekit.load();}catch(e){}</script>
-<script> var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-518812-8"]);_gaq.push(["_trackPageview"]);(function(A){var C=A.createElement("script");C.async=true;C.src=("https:"==A.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var B=A.getElementsByTagName("script")[0];B.parentNode.insertBefore(C,B);})(document); </script> 
+<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
 </head>
 
 
@@ -23,7 +22,9 @@
 	<h1>Font name</h1>
 </div>
 
-<p class="grid_16" id="soma-intro">This page demonstrates <a href="http://somadesign.ca/projects/fontfriend/">FontFriend</a>’s <a href="http://typekit.com/">Typekit</a> integration. All fonts in your kit will automatically show up in the Custom Font Family list.<br /><em>This page has FontFriend embedded, but you would normally invoke it with the bookmarklet. (See the <a href="http://somadesign.ca/projects/fontfriend/">FontFriend project page</a> for instructions.)</em></p>
+<p class="grid_16" id="soma-intro">This page demonstrates <a href="https://github.com/testroboto/testroboto.github.com/">Test Roboto</a>, a simplified <a href="https://github.com/testroboto/testroboto.github.com/">FontFriend</a>, using Google Web Fonts.<br /><em>This page has TestRoboto already loaded, but you would normally invoke it with this bookmarklet:</em></p>
+
+<p><a href="javascript:(function()%20%7Bif(typeof%20jQuery=='undefined')%7Bvar%20jqit=document.createElement('script');jqit.type='text/javascript';jqit.src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js';document.getElementsByTagName('head')%5B0%5D.appendChild(jqit);%7D%20_my_script=document.createElement('script');_my_script.type='text/javascript';_my_script.src='https://raw.github.com/testroboto/testroboto.github.com/master/font-friend.js';document.getElementsByTagName('head')%5B0%5D.appendChild(_my_script);%7D)();">Try Google Web Fonts</a></p>
 
 <!-- TEXT SAMPLE -->
 <div class="grid_8">
