Trying a fix for the always-show-roboto hack in the FF html

--- a/font-friend.html
+++ b/font-friend.html
@@ -15,6 +15,7 @@
 		<h6>Change Fonts To</h6>
 		<ul id="ff-font-family-sans" data-ff="fontFamily">
 			<li>Arial</li>
+			<li>Roboto</li>
 		</ul>		
 	</div>
 
